Video and lists

--- a/lyrics.html
+++ b/lyrics.html
@@ -10,6 +10,13 @@
         target="_blank">
             Original video
         </a>
+        <br><br>
+        <a href="https://www.youtube.com/watch?v=Eo-KmOd3i7s&ab_channel=NSYNCVEVO"
+        target="_blank">
+            <img src="images/ByeByeBye.jpg" 
+            alt="album art cover"
+            height="200">
+        </a>
         <hr>
         <pre>
             Hey, hey
