--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--link is the icon on the window tab-->
+        <link rel="icon" type="image/jpg" href="images/mega_mimikyu.jpg">
         <title> My first website</title>
     </head>
     <body>
@@ -8,21 +10,107 @@
         <h2> This is an h2 heading </h2>
         <h3> This is an h3 heading </h3>
         <h4> This is an h4 heading </h4>
+        <p>Bye Bye Bye by NSYNC</p>
+        <audio controls>
+            <source src="music/ByeByeBye.mp3" type="audio/mpeg">
+        </audio>
     </body>
+    <br>
+    <br>
+    <a target="_blank" href="https://www.tiktok.com/@nott10nat/video/7440656401338273042?is_from_webapp=1&sender_device=pc&web_id=7403879524586407467">
+        <video height="500px" controls>
+            <source src="videos/T10Nat.mp4" type="video/mp4">
+        </video>
+    </a>
     <hr>
-    <p> 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Doloremque, maxime asperiores inventore sint, sit eius fugiat 
-        recusandae reprehenderit rem a error nobis quia explicabo minus 
-        optio adipisci impedit laborum quasi.
-    </p>
-    <pre>
-        Same thing with pretag:
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Doloremque, maxime asperiores inventore sint, sit eius fugiat 
-        recusandae reprehenderit rem a error nobis quia explicabo minus 
-        optio adipisci impedit laborum quasi.
-    </pre>
+    <body>
+        <p> 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Doloremque, maxime asperiores inventore sint, sit eius fugiat 
+            recusandae reprehenderit rem a error nobis quia explicabo minus 
+            optio adipisci impedit laborum quasi.
+        </p>
+        <pre>
+            Same thing with pretag:
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Doloremque, maxime asperiores inventore sint, sit eius fugiat 
+            recusandae reprehenderit rem a error nobis quia explicabo minus 
+            optio adipisci impedit laborum quasi.
+        </pre>
+        <p>This is a normal text</p>
+        <p>This is a <b>bold</b> text</p>
+        <p>This is a <i>italic</i> text</p>
+        <p>This is a <u>underlined</u> text</p>
+        <p>This is a <del>deleted</del> text</p>
+        <p>This is a <big>big</big> text</p>
+        <p>This is a <small>small</small> text</p>
+        <p>This is a <sub>subscript</sub> text</p>
+        <p>This is a <sup>superscript</sup> text</p>
+        <p>This is a <tt>monospaced</tt> normal text</p>
+        <p>This is a <mark style="background-color:lightgreen">monospaced</mark> normal text</p>
+        
+        <!-- GROUP TOGETHER HTML -->
+        <!-- <span> inline container to group elements for styling -->
+        <!-- <div> block container to group element sfor styling -->
+        <h1><span style="background-color: tomato;">This is a span title</span></h1>
+        <h1><div style="background-color: cyan;">This is a div title</div></h1>
+
+        <p><span style="background-color: tomato;">This is a span sentence.</span></p>
+        <p><div style="background-color: cyan;">This is a div sentence.</div></p>
+
+        <pre>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <span style="background-color: tomato;">
+                Doloremque, maxime asperiores inventore sint, sit eius fugiat 
+                recusandae reprehenderit rem a error nobis quia explicabo minus 
+                optio adipisci impedit laborum quasi.
+            </span>
+        </pre>
+
+        <pre>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <div style="background-color: cyan;">
+                Doloremque, maxime asperiores inventore sint, sit eius fugiat 
+                recusandae reprehenderit rem a error nobis quia explicabo minus 
+                optio adipisci impedit laborum quasi.
+            </div>
+        </pre>
+        <!-- Unordered List (grocery List)-->
+         <h4>Groceries</h4>
+         <ul>
+            <!-- <li> is list item -->
+            <li>milk</li>
+            <li>eggs</li>
+            <li>bread</li>
+            <li>coffee supplies</li>
+            <ul>
+                <li>coffee beans</li>
+                <li>creamer</li>
+                <li>sugar</li>
+            </ul>
+         </ul>
+        <!-- Ordered List -->
+         <h4>To do list</h4>
+         <ol>
+            <li>eat breakfast</li>
+            <li>go to class</li>
+            <li>walk dog</li>
+            <li>go to work</li>
+         </ol>
+        <!-- Description List -->
+         <h4>Mythical creatures</h4>
+         <dl style="background-color: lightgreen; border:2px solid">
+            <dt>dragon</dt>
+            <dd>
+                a mythical monster resembling a giant reptile, sometimes shown as having wings. In European tradition the dragon is typically fire-breathing and tends to symbolize chaos or evil, whereas in East Asia it is usually a beneficent symbol of fertility, associated with water and the heavens.</dd>
+            <dt>phoenix</dt>
+            <dd>(in classical mythology) a unique bird that lived for five or six centuries in the Arabian desert, after this time burning itself on a funeral pyre and rising from the ashes with renewed youth to live through another cycle.</dd>
+            <dt>vampire</dt>
+            <dd>a corpse supposed, in European folklore, to leave its grave at night to drink the blood of the living by biting their necks with long pointed canine teeth.</dd>
+            <dt>werewolf</dt>
+            <dd>(in myth or fiction) a person who changes for periods of time into a wolf, typically when there is a full moon.</dd>
+        </dl>
+    </body>
 
     <!-- THIS IS A COMMENT -->
     <a href="https://www.google.com/" 
