January 9, 2025 dropdownmenu, flexbox, icons, image gallery, about, contact, navigation bar, website layout.

--- a/css/pagination/page4.html
+++ b/css/pagination/page4.html
@@ -13,18 +13,18 @@
                       and numbers are given
     -->
 
-    <h1>This is page #1</h1>
+    <h1>This is page #4</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet in repudiandae porro ut ab ullam minima tempore nulla, magni perferendis a inventore distinctio, fugiat explicabo maxime, dicta soluta voluptates officiis!</p>
 
     <div class="pagination">
-        <a href="pagination.html"><</a>
-        <a href="pagination.html" class="active">1</a>
+        <a href="page3.html"><</a>
+        <a href="pagination.html">1</a>
         <a href="page2.html">2</a>
         <a href="page3.html">3</a>
-        <a href="page4.html">4</a>
+        <a href="page4.html" class="active">4</a>
         <a href="page5.html">5</a>
-        <a href="page2.html">></a>
+        <a href="page5.html">></a>
     </div>
     
 </body>
